--- a/tasks/finapp-gpt-frontend.json
+++ b/tasks/finapp-gpt-frontend.json
@@ -1,28 +1,31 @@
-[
-  {
-      "name": "finapp-gpt-frontend",
-      "image": "nginx",
-      "essential": true,
-      "portMappings": [
-          {
-              "containerPort": 8080,
-              "hostPort": 8080,
-              "protocol": "tcp"
+{
+  "containerDefinitions":
+  [
+    {
+        "name": "finapp-gpt-frontend",
+        "image": "nginx",
+        "essential": true,
+        "portMappings": [
+            {
+                "containerPort": 8080,
+                "hostPort": 8080,
+                "protocol": "tcp"
+            }
+        ],
+        "logConfiguration": {
+          "logDriver": "awslogs",
+          "options": {
+              "awslogs-group": "/ecs/finapp-gpt-frontend",
+              "awslogs-region": "us-east-1",
+              "awslogs-stream-prefix": "application"
           }
-      ],
-      "logConfiguration": {
-        "logDriver": "awslogs",
-        "options": {
-            "awslogs-group": "/ecs/finapp-gpt-frontend",
-            "awslogs-region": "us-east-1",
-            "awslogs-stream-prefix": "application"
-        }
-    },
-      "environment": [
-          {
-              "name": "PLACEHOLDER",
-              "value": "REPLACEME"
-          }
-      ]
-  }
-]
+      },
+        "environment": [
+            {
+                "name": "PLACEHOLDER",
+                "value": "REPLACEME"
+            }
+        ]
+    }
+  ]
+}
