--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:5000
-VITE_API_LOGIN=https://yc70onuuyh.execute-api.us-east-1.amazonaws.com/dev
+VITE_API_URL=alb-finapp-gpt-backend-1228979388.us-east-1.elb.amazonaws.com
+VITE_API_LOGIN=https://oenv9q3y19.execute-api.us-east-1.amazonaws.com/dev
